--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://bmjxdev.github.io/"
+baseURL: "https://bmjxdev.github.io/bmjxDev/"
 languageCode: "en-us"
 title: "Brice J. profile"
 theme: "./.."
